// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> snapshots renders RadioButton 1`] = `
<div
  className="mfui-radio-button"
>
  <label
    className="mfui-radio-button__label"
  >
    <input
      className="mfui-radio-button__input"
      disabled={false}
      onChange={[Function]}
      type="radio"
      value="value-text"
    />
    <div
      className="mfui-radio-button__custom-input"
    />
    <div
      className="mfui-radio-button__text mfui-radio-button__text_size_medium"
    >
      Тестовая строка
    </div>
  </label>
</div>
`;

exports[`<RadioButton /> snapshots renders RadioButton with props 1`] = `
<div
  className="mfui-radio-button test-class root-class"
  data-test="test"
>
  <label
    className="mfui-radio-button__label mfui-radio-button__label_disabled label-class"
  >
    <input
      checked={true}
      className="mfui-radio-button__input"
      data-test="test"
      disabled={true}
      name="test-input-name"
      onChange={[Function]}
      type="radio"
      value="test-input-value"
    />
    <div
      className="mfui-radio-button__custom-input custom-input-class"
    />
    <div
      className="mfui-radio-button__text mfui-radio-button__text_size_small label-text-class"
      data-test="test"
    >
      Тестовая строка
    </div>
  </label>
</div>
`;
